# Word2World

./: .gitignore  README.md
AgentGym/: .gitignore
AgentGym-RL/scripts/: multiple_model_merger.py
AgentGym/agentenv-alfworld/: generate_mappings_seen_unseen.sh
AgentGym/agentenv-alfworld/agentenv_alfworld/: env_wrapper.py  server.py
AgentGym/agentenv-alfworld/configs/: mappings_valid_seen.json  mappings_valid_unseen.json
AgentGym/agentenv-textworld/: README.md  pyproject.toml
AgentGym/agentenv-textworld/agentenv_textworld/: __init__.py  env_wrapper.py  environment.py  launch.py  model.py  server.py
AgentGym/agentenv-textworld/textworld/textworld/challenges/tw_simple/: simple.py
AgentGym/agentenv-webshop/agentenv_webshop/: environment.py  model.py  server.py
AgentGym/agentenv-webshop/webshop/: requirements.txt
scripts/collect_init_context/: collect_agent_instruct.py  collect_agent_instruct.sh  collect_all.sh  collect_wm_instruct_alfworld.py  collect_wm_instruct_sciworld.py  collect_wm_instruct_textworld.py  collect_wm_instruct_webshop.py
scripts/download_data/: alfred.twl2  download_data.py
scripts/env_server/: start_alfworld.sh  start_sciworld.sh  start_textworld.sh  start_webshop.sh
scripts/env_setup/: uv_agentgym_rl.sh  uv_alfworld.sh  uv_sciworld.sh  uv_textworld.sh  uv_webshop.sh
scripts/interact_with_real_env/: run.py  run_azure.sh  run_openai.sh  run_vllm.sh
scripts/interact_with_world_model/: azure_openai.py  cal_wm2real.py  cal_wm2real.sh  run.py  run.sh
scripts/single_step_accuracy/: run.py  run.sh
(+8 files in other folders)
